# prkl-ann

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
apps/: evaluate.cpp  math-sandbox.cpp  mnist-digits.cpp  train.cpp
data/: mnnist-digits-evaluation.prklset  mnnist-digits-training.prklset
example/: main.cpp
models/: mnist-digits-big.prklmodel  mnist-digits.prklmodel  prkl-mnist-digits-big.json  prkl-mnist-digits-big.model  prkl-mnist-digits-big.prklmodel  prkl-mnist-digits-medium.json  prkl-mnist-digits-medium.model  prkl-mnist-digits-medium.prklmodel  prkl-mnist-digits-small.json  prkl-mnist-digits-small.model  prkl-mnist-digits-small.prklmodel
src/: common.cpp  common.hpp  layer.cpp  layer.hpp  model.cpp  model.hpp  neuron.cpp  neuron.hpp  set.cpp  set.hpp
